testsuite/poke.pkl/mod-f64-diag-2.pk
/* { dg-do compile } */

var res
  = 1L .% (11 as uint<63>); /* { dg-error "invalid operand .*" } */
